src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Aftersales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>First Contact Customer</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Purchased%28Only None BDC%29</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Visited Showroom%28Only None BDC%29</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Dealer__c</fullName>
        <formula>Contact__r.Main_Dealer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <picklist>
            <picklistValues>
                <fullName>mini car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mpv/van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wagon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bought_Vehicle__c</fullName>
        <label>Bought Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAC_Verify_Result__c</fullName>
        <label>CAC Verify Result</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAC Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Car_License__c</fullName>
        <label>Car License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collectioner__c</fullName>
        <label>Collectioner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Failed_For_3_Days_Date__c</fullName>
        <label>Contact Failed For 3 Days Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sub_source__c</fullName>
        <label>Data Sub-source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Status__c</fullName>
        <label>Dealer Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Contact Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visited Showroom(Only None BDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased(Only None BDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Contact_Customer_Date__c</fullName>
        <label>First Contact Customer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <picklist>
            <picklistValues>
                <fullName>设计黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>设计红色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>设计米黄色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>织物黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>真皮 博速特别版</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黑色皮饰套件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRABUS皮饰套件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>水晶灰色皮饰套件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黑红色皮饰套件</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_qualify__c</fullName>
        <label>Is qualify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Additional_Service__c</fullName>
        <label>Lead Additional Service</label>
        <picklist>
            <picklistValues>
                <fullName>5=Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=participate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9=general car care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10=retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11=insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12=car wash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Desired_Service__c</fullName>
        <label>Lead Desired Service</label>
        <picklist>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Type__c</fullName>
        <label>Lead Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>0=汽车养护产品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=易损件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=普通零件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=售后服务合同</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=其他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0=选装配件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=精品</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0=Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=TA&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Activities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Cycle__c</fullName>
        <label>Life Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Need to be transferred to CS system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for RO allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for dealer allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer processing (LMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for re-allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer contact dealer already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed -  convert to other series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to other brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost with no interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for RO allocation(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for dealer allocation(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer processing(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – lost sale(after sales following, in-active)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (before sales, in-active)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to be transfer to RME /smart pre-sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <label>Lost Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Out of Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought MB elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought other brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase plan postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade in failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No serious interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer can not be reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer does not respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid customer data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hibernate Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No suitable model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied with service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The showroom is not convenient for me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate for un-reported show-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Daimler Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Campaign Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Placed_Date__c</fullName>
        <label>Order Placed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer__c</fullName>
        <label>Preferred Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Preferred Dealer)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Range__c</fullName>
        <label>Price Range</label>
        <picklist>
            <picklistValues>
                <fullName>RMB100,001~150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB150,001~200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB200,000~300,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB300,001~400,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB400,001~500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB500,001~700,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB700,001~1 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB1,000,001~1,500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB1,500,001~2 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2～3 million RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 3 million RMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three or Four</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five or Six</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than Six</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Time__c</fullName>
        <label>Purchase Time</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Plans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchased_Date__c</fullName>
        <label>Purchased Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referal_Name__c</fullName>
        <label>Referal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referal_PhoneNumber__c</fullName>
        <label>Referal PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referee_Name__c</fullName>
        <label>Referee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_PhoneNumber__c</fullName>
        <label>Referee PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relation_With_The_Leads__c</fullName>
        <label>Relation With The Leads</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserve_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserve Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_In_Vehicle__c</fullName>
        <label>Trade In Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <label>Vehicle Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <label>Vehicle Class</label>
        <picklist>
            <controllingField>Vehicle_Brand__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <picklist>
            <controllingField>Vehicle_Class__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B180 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Sports Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 豪华型 夜行独享版</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K 经典型 (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K 经典型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI优雅型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI时尚型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 优雅型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 旅行轿车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 时尚型旅行轿车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A fashion model (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E  grace model (not current series)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Note__c</fullName>
        <label>Vehicle Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Source__c</fullName>
        <label>Vehicle Source</label>
        <picklist>
            <picklistValues>
                <fullName>0=Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vin_Number__c</fullName>
        <label>Vin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited_Showroom_Date__c</fullName>
        <label>Visited Showroom Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Preferred_Dealer__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>合格</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Aftersales_Lead</fullName>
        <active>true</active>
        <businessProcess>Aftersales Lead</businessProcess>
        <label>Aftersales Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <label>Sales Lead</label>
    </recordTypes>
</CustomObject>